[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "caplena"
authors = [{name = "Caplena", email = "support@caplena.com"}, {name = "Nico Haenggi", email = "nico@caplena.com"}]
maintainers = [{name = "Caplena", email = "support@caplena.com"}, {name = "Nico Haenggi", email = "nico@caplena.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://developers.caplena.com/ZG9jOjI4OTQwODQ3-client-libraries"
Reference = "https://github.com/caplena/caplena-python"
Source = "https://github.com/caplena/caplena-python"

[tool.black]
line-length = 100
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''